# traceclassifier

./: .gitignore  pyproject.toml
data/: all_questions_with_wrong_answers.json  all_validated_questions.json
scripts/: 01_merge_and_generate.py  02_generate_wrong_answers.py  03_classify_domains.py  04_sanity_check.py  05_generate_documents.py  05b_fixup_docs.py  06_main_pipeline.py  07_test_judge.py  08_train_classifier.py  bench_workers.py  debug_spans.py  test_redis.py  test_redis_resp.py  verify_phoenix.py
src/: cache.py  client.py  document_gen.py  features.py  judge.py  tracing.py  wrong_answer.py
