[project]
name = "hacktrace"
version = "0.1.0"
description = "Reasoning Under Pressure — Berkeley AI Hackathon 2026"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.1",
    "openinference-instrumentation-anthropic>=1.0.6",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
]
